# Remi

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  STATUS.md  plan.md
.github/workflows/: ci.yml  release.yml
.omc/: project-memory.json
.omc/sessions/: 034c33b8-a57b-4b48-9b5e-cef040ad3efc.json
Formula/: remi.rb
crates/adapters/amp/: Cargo.toml
crates/adapters/amp/src/: lib.rs
crates/adapters/claude/: Cargo.toml
crates/adapters/claude/src/: lib.rs
crates/adapters/codex/: Cargo.toml
crates/adapters/codex/src/: lib.rs
crates/adapters/common/: Cargo.toml
crates/adapters/common/src/: lib.rs
crates/adapters/droid/: Cargo.toml
crates/adapters/droid/src/: lib.rs
crates/adapters/opencode/: Cargo.toml
crates/adapters/opencode/src/: lib.rs
crates/adapters/pi/: Cargo.toml
crates/adapters/pi/src/: lib.rs
crates/archive/: Cargo.toml
crates/archive/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  main.rs  render.rs  ui.rs
crates/cli/templates/: session.html
crates/cli/tests/: docs_regressions.rs
crates/core-model/: Cargo.toml
crates/core-model/src/: lib.rs
crates/embeddings/: Cargo.toml
crates/embeddings/src/: lib.rs
crates/ingest/: Cargo.toml
crates/ingest/src/: lib.rs
crates/search/: Cargo.toml
crates/search/src/: lib.rs
crates/store-sqlite/: Cargo.toml
crates/store-sqlite/src/: lib.rs
scripts/: markie-export.sh  remi-diary.sh
