[workspace]
members = [
  "crates/core-model",
  "crates/store-sqlite",
  "crates/ingest",
  "crates/search",
  "crates/archive",
  "crates/adapters/pi",
  "crates/adapters/droid",
  "crates/adapters/opencode",
  "crates/adapters/claude",
  "crates/adapters/common",
  "crates/cli",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Remi"]

[workspace.dependencies]
anyhow = "1"
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
humantime = "2"
rusqlite = { version = "0.33", features = ["bundled", "chrono", "serde_json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
thiserror = "2"
