[package]
name = "archive"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
chrono.workspace = true
core-model = { path = "../core-model" }
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
store-sqlite = { path = "../store-sqlite" }
