[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "remi"
path = "src/main.rs"

[dependencies]
askama = "0.12"
anyhow.workspace = true
archive = { path = "../archive" }
chrono.workspace = true
clap.workspace = true
claude = { path = "../adapters/claude" }
amp = { path = "../adapters/amp" }
codex = { path = "../adapters/codex" }
core-model = { path = "../core-model" }
droid = { path = "../adapters/droid" }
humantime.workspace = true
ingest = { path = "../ingest" }
opencode = { path = "../adapters/opencode" }
pi = { path = "../adapters/pi" }
search = { path = "../search" }
store-sqlite = { path = "../store-sqlite" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = "0.8"
dirs = { workspace = true }
embeddings = { path = "../embeddings", optional = true }
owo-colors = "4"
fuzzy-matcher = "0.3"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
semantic = ["dep:embeddings", "ingest/semantic", "search/semantic", "store-sqlite/semantic"]
