[package]
name = "ingest"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
core-model = { path = "../core-model" }
store-sqlite = { path = "../store-sqlite" }
embeddings = { path = "../embeddings", optional = true }

[features]
semantic = ["dep:embeddings", "store-sqlite/semantic"]

[dev-dependencies]
serde_json.workspace = true
