[package]
name = "search"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
store-sqlite = { path = "../store-sqlite" }
embeddings = { path = "../embeddings", optional = true }
chrono.workspace = true

[features]
semantic = ["dep:embeddings", "store-sqlite/semantic"]

[dev-dependencies]
core-model = { path = "../core-model" }
