[package]
name = "opencode"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
adapter-common = { path = "../common" }
core-model = { path = "../../core-model" }
dirs.workspace = true
rayon.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
